Fix API and improve doc. Replace jwt package for the active fork. Fix some endpoints and improve the response in the list adding count
