# app/Http/Controllers/Api/Lead/LeadListController.php
@@ -4,18 +4,20 @@ declare(strict_types=1);
 
 namespace App\Http\Controllers\Api\Lead;
 
+use App\Http\Controllers\Api\ApiController;
 use App\Models\Lead;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
 
-class LeadListController
+class LeadListController extends ApiController
 {
     /**
      * @OA\Get(
      *      path="/lead",
      *      summary="Lead list by company",
      *      tags={"Leads"},
-     *      security={ {"bearerAuth": {} }},
+     *      security={{"bearerAuth": {} }},
      *      @OA\Response(
      *          response="200",
      *          description="Lead list retrived successfully",
@@ -28,6 +30,8 @@ class LeadListController
      */
     public function index(Request $request): JsonResponse
     {
-        return response()->json(['leads' => Lead::all()]);
+        $count = Lead::where('company_id', Auth::user()->company_id)->count();
+        $leads = Lead::where('company_id', Auth::user()->company_id)->get();
+        return response()->json(['count' => $count, 'leads' => $leads]);
     }
 }
