# app/Http/Controllers/Api/Product/ProductListController.php
@@ -2,18 +2,32 @@
 
 namespace App\Http\Controllers\Api\Product;
 
-use App\Http\Resources\ProductResource;
 use App\Models\Product;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
 
 class ProductListController
 {
     /**
+     * @OA\Get(
+     *      path="/product",
+     *      summary="Product list by company",
+     *      tags={"Products"},
+     *      security={{"bearerAuth": {} }},
+     *      @OA\Response(
+     *          response="200",
+     *          description="Products list retrived successfully",
+     *          @OA\JsonContent(ref="#/components/schemas/Product")
+     *      )
+     * )
+     *
      * @param  Request  $request
-     * @return \Illuminate\Http\Resources\Json\AnonymousResourceCollection
+     * @return \Illuminate\Http\JsonResponse
      */
     public function index(Request $request)
     {
-        return ProductResource::collection(Product::all());
+        $count = Product::where('company_id', Auth::user()->company_id)->count();
+        $products = Product::where('company_id', Auth::user()->company_id)->get();
+        return response()->json(['count' => $count, 'products' => $products]);
     }
 }
